--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+    "name":"codedserver2",
+    "version":"1.0.0",
+    "description":"second backend server",
+    "main":"main.js",
     "scripts":{
         "start":"node main.js",
-        "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix pages/build && npm run build --prefix pages/build"
+    },
+    "dependencies":{
+        "express":"^4.17.1",
+        "path":"^0.12.7"
+    },
+    "engines":{
+        "node":"14.x"
     }
 }
